--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,10 @@ repository: Git repository where your resume will be hosted, only required if yo
 # favicon: Directory of your favicon (eg. images/favicon.ico)(optional)
 
 # Personal info
-name: Your Name
-title: Your job title
-email: Your email (optional)
-phone: Your phone number (optional)
-website: Your website (eg. https://google.com)(optional)
+name: Daryle Lee
+title: PhD CFA FRM MIET
+email: emasterclassacademy@gmail.com
+phone: +852-98783790
 
 # Dark Mode (true/false/never)
 darkmode: true
