--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ youtube_username: channel/UCtfTf1nNJQ4PbUDqj-Q48rw
 
 # About Section
 # about_title: About Me (Use this to override about section title)
-about_profile_image: logo.png
+about_profile_image: logo_head.png
 about_content: | # this will include new lines to allow paragraphs
   Write an awesome description about yourself here, this supports markdown, so you can add [links](http://foobar.com) and highlight things <mark>like this</mark>.
 
