--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ about_content: | # this will include new lines to allow paragraphs
 #  - Tables
 #  - <a href="google.com">Links</a>
 #  - Images
-  A self-motivated, discipline and dedicated individual, with <mark>10 years of data analytics and modelling experience</mark> in the academic and energy sectors. 
+  A self-motivated, discipline and dedicated individual, with 10 years of data analytics and modelling experience in the academic and energy sectors. 
   An excellent team player, with strong interpersonal skills and attention-to-detail mentality best suited for complex tasks and analytical work. A focus person who constantly strives to learn and perfect the skill sets to be ahead of the field.
 
 # Projects Section
