--- a/_config.yml
+++ b/_config.yml
@@ -29,8 +29,11 @@ youtube_username: channel/UCtfTf1nNJQ4PbUDqj-Q48rw
 # about_title: About Me (Use this to override about section title)
 about_profile_image: logo_head1.png
 about_content: | # this will include new lines to allow paragraphs
-  A self-motivated, discipline and dedicated individual, with 10 years of data analytics and modelling experience in the academic and energy sectors. 
-  An excellent team player, with strong interpersonal skills and attention-to-detail mentality best suited for complex tasks and analytical work. A focus person who constantly strives to learn and perfect the skill sets to be ahead of the field.
+  A self-motivated, discipline and dedicated individual, with 10 years of data analytics and modelling experience in the academic and energy sectors.
+  
+  An excellent team player, with strong interpersonal skills and attention-to-detail mentality best suited for complex tasks and analytical work. 
+  
+  A focus person who constantly strives to learn and perfect the skill sets to be ahead of the field.
 
 # Projects Section
 # projects_title: Projects #(Use this to override about projects section title)
