--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,10 +1,20 @@
 # Experience template
 - layout: left
-  company: Company name
-  link: Link to company (optional)
-  job_title: Job title
-  dates: Date Range (eg. November 2016 - present)
+  company: CLP Holdings
+  link: www.clpgroup.com
+  job_title: Assistant Manager – CLP Research Institute
+  dates: Dec 18 – Present 
   quote: >
    Short description of the company (optional)
   description: | # this will include new lines to allow paragraphs
-    Description of role
+    Directly report to the Director and lead a research team in managing CLP Research Institute’s projects and operations
+    Strategic Planner responsibilities
+      •	Identify, prioritize and participate in R&D projects to support business strategy, opportunities and needs
+      •	Monitor research and emerging technological development, and evolving international and local industry-related regulations that are impacting overall business strategy
+     Researcher and Data Scientist responsibilities
+      •	Deliver regular research papers on emerging issues and technologies of strategic importance to CLP’s business 
+      •	Develop end-to-end analytical products using machine learning and statistical techniques
+      •	Provide machine learning and statistical technical advice to the wider analytics team
+    Communications responsibilities
+      •	Support Group-level research-related communications and positions
+      •	Engage international and local stakeholders through speaking/lecturing to business community, academia, students and the public on industry challenges and practices
