--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -7,14 +7,14 @@
   quote: >
    Short description of the company (optional)
   description: | # this will include new lines to allow paragraphs
-    Directly report to the Director and lead a research team in managing CLP Research Institute’s projects and operations
-    Strategic Planner responsibilities
-      •	Identify, prioritize and participate in R&D projects to support business strategy, opportunities and needs
-      •	Monitor research and emerging technological development, and evolving international and local industry-related regulations that are impacting overall business strategy
-     Researcher and Data Scientist responsibilities
-      •	Deliver regular research papers on emerging issues and technologies of strategic importance to CLP’s business 
-      •	Develop end-to-end analytical products using machine learning and statistical techniques
-      •	Provide machine learning and statistical technical advice to the wider analytics team
-    Communications responsibilities
-      •	Support Group-level research-related communications and positions
-      •	Engage international and local stakeholders through speaking/lecturing to business community, academia, students and the public on industry challenges and practices
+    Directly report to the Director and lead a research team in managing CLP Research Institute’s projects and operations<br>
+    <mark>Strategic Planner responsibilities</mark><br>
+      •	Identify, prioritize and participate in R&D projects to support business strategy, opportunities and needs <br>
+      •	Monitor research and emerging technological development, and evolving international and local industry-related regulations that are impacting overall business strategy <br>
+    <mark>Researcher and Data Scientist responsibilities</mark><br>
+      •	Deliver regular research papers on emerging issues and technologies of strategic importance to CLP’s business <br>
+      •	Develop end-to-end analytical products using machine learning and statistical techniques <br>
+      •	Provide machine learning and statistical technical advice to the wider analytics team <br>
+    <mark>Communications responsibilities</mark><br>
+      •	Support Group-level research-related communications and positions<br>
+      •	Engage international and local stakeholders through speaking/lecturing to business community, academia, students and the public on industry challenges and practices <br>
