--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,9 @@ about_content: | # this will include new lines to allow paragraphs
   An excellent team player, with strong interpersonal skills and attention-to-detail mentality best suited for complex tasks and analytical work. 
   
   A focus person who constantly strives to learn and perfect the skill sets to be ahead of the field.
+  
+  Area of Expertise: <mark>Electrical Engineering</mark> <mark>Artificial Intelligence and Machine Learning</mark> <mark>Data Analytics and Data Science</mark> 
+  <mark>Applications of AI and ML to Energy, Finance and other domains</mark> <mark>Education</mark>
 
 # Projects Section
 # projects_title: Projects #(Use this to override about projects section title)
