--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,9 @@ about_content: | # this will include new lines to allow paragraphs
   
   A focus person who constantly strives to learn and perfect the skill sets to be ahead of the field.
   
-  Area of Expertise: <mark>Artificial Intelligence and Machine Learning</mark> 
+  Area of Expertise: 
+  
+  <mark>Artificial Intelligence and Machine Learning</mark> 
   <mark>Data Analytics and Data Science</mark>
   <mark>Digital Strategy</mark>
   <mark>Digital Marketing</mark>
