--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,9 +1,8 @@
 # Project template
-- layout: top-middle
-  name: Project name
-  link: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
-  github: Github page for project (eg. sproogen/modern-resume-theme)(optional)
-  quote: >
-    Short overview of the project (optional)
+- layout: top-left
+  name: Kong Magazine
+  link: www.konghk.com
   description: | # this will include new lines to allow paragraphs
-    Description about the work on/with the project
+    <b>Founding Member and Business Director</b><br>
+    Roles and Responsibities<br>
+    
