--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,5 +1,5 @@
 # Project template
-- layout: top-middle
+- layout: left
   name: Kong Magazine
   link: www.konghk.com
   description: | # this will include new lines to allow paragraphs
