--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -2,6 +2,8 @@
 - layout: left
   name: Kong Magazine
   link: www.konghk.com
+  job_title: Founding Member & Business Director
+  dates: 2019 – Present 
   description: | # this will include new lines to allow paragraphs
     <b>Founding Member and Business Director</b><br>
     Roles and Responsibities<br>
