--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -5,6 +5,8 @@
   job_title: Founding Member & Business Director
   dates: 2019 – Present 
   description: | # this will include new lines to allow paragraphs
-    <b>Founding Member and Business Director</b><br>
-    Roles and Responsibities<br>
+    <b>Roles and Responsibities</b><br>
+    <mark>Business Development</mark><br>
+    <mark>Digital Strategy</mark><br>
+    <mark>Digital Marketing</mark><br>
     
