--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ about_content: | # this will include new lines to allow paragraphs
   <mark>Strategic Planning</mark>
 
 # Projects Section
-# projects_title: Projects #(Use this to override about projects section title)
+projects_title: Current Experience #(Use this to override about projects section title)
 
 # Experience Section
 # experience_title: Experience #(Use this to override about experience section title)
