--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -5,7 +5,7 @@
   job_title: 
   dates: 2020 – Present 
   description: | # this will include new lines to allow paragraphs
-    <b><p style="font-size:20px">Founder</p></b>
+    <p style="font-size:20px">Founder</p>
     Roles and Responsibities<br>
     <mark>Artificial Intelligence and Machine Learning</mark><br>
     <mark>Data Analytics and Data Science</mark><br>
