--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -5,7 +5,7 @@
   job_title: 
   dates: 2020 – Present 
   description: | # this will include new lines to allow paragraphs
-    <b><font size="+2">Founder</font></b>
+    <b><font size="+2">Founder</font></b><br>
     Roles and Responsibities<br>
     <mark>Artificial Intelligence and Machine Learning</mark><br>
     <mark>Data Analytics and Data Science</mark><br>
