--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -16,9 +16,9 @@
   job_title: Senior Research Assistant 
   dates: Feb 13 – Dec 15
   description: | # this will include new lines to allow paragraphs
-  Research Projects:
+  Research Projects
     •	Government trustworthiness in nuclear safety emergency governance in the UK
     •	Smart demand response programs in China 
     •	Vanadium-metal hydride flow battery in a smart grid
-    •	PSCADA and EMS functions in Power Dispatch Center under Guangdong Power Grid
-    •	Consumption patterns under two demand response schemes: Time-of-Use and Peak Time Rebate tariffs
+    •	SCADA and EMS functions in Power Dispatch Center under Guangdong Power Grid
+    •	Consumption patterns under two demand response schemes - Time-of-Use and Peak Time Rebate tariffs
