--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -5,7 +5,17 @@
   job_title: Course Lecturer
   dates: Jan 15 – Dec 15
   description: | # this will include new lines to allow paragraphs
-    Roles and Responsibilities
+    Roles and Responsibilities<br>
     <mark>Artificial Intelligence and Machine Learning</mark><br>
     <mark>Education</mark>
     <mark>Electrical Engineering</mark>
+
+
+- layout: left
+  company: The University of Hong Kong
+  link: www.hku.hk
+  job_title: Senior Research Assistant 
+  dates: Feb 13 – Dec 15
+  description: | # this will include new lines to allow paragraphs
+  Research Projects
+
