--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -21,5 +21,5 @@
     •	Smart demand response programs in China<br>
     •	Vanadium-metal hydride flow battery in a smart grid<br>
     •	SCADA and EMS functions in Power Dispatch Center under Guangdong Power Grid<br>
-    •	Consumption patterns under two demand response schemes - Time-of-Use and Peak Time Rebate tariffs<br>
+    •	Demand response schemes - Time-of-Use and Peak Time Rebate tariffs in Hong Kong<br>
 
