--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -23,3 +23,19 @@
     •	SCADA and EMS functions in Power Dispatch Center under Guangdong Power Grid<br>
     •	Demand response schemes - Time-of-Use and Peak Time Rebate tariffs in Hong Kong<br>
 
+- layout: left
+  company: Various Banks
+  link:
+  job_title: 
+  dates: Aug 08 – Feb 13
+  description: | # this will include new lines to allow paragraphs
+    Jun 12 – Feb 13	   Treasures Relationship Manager, DBS Bank<br>	       
+    Feb 11 – Mar 12	   Associate Relationship Manager, HSBC<br>	
+    May 10 – Feb 11	   Financial Planning Consultant, Citibank<br>           
+    Dec 09 – Apr 10	   Personal Financial Manager, Standard Chartered Bank<br>
+    Aug 08 – Nov 09	   General Banking Officer, HSBC<br>
+    Roles and Responsibilities<br>
+    <mark>Portfolio Management</mark><br>
+    <mark>Financial Planning</mark><br>
+    <mark>General Banking</mark>
+
