--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -40,7 +40,7 @@
     <mark>Portfolio Management</mark>
 
 - layout: left
-  company:  Hongkong Electric Co. Ltd
+  company:  Hongkong Electric
   link: www.hkelectric.com
   job_title: Graduate Trainee
   dates: Aug 07 – Aug 08
