--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,9 +1,7 @@
 # Education Template
 - layout: left
-  name: Institution name
-  dates: Date Range (eg. 2016 - 2019)
-  qualification: Qualifications (eg. BA Performing Arts)
-  quote: >
-    Short institution or course description (optional)
+  name: Ivey Business School at Wester University
+  dates: Sep 19 – Present
+  qualification: Certification
   description: | # this will include new lines to allow paragraphs
-    Description of qualification
+    Accelerated Management Talent Consortium Programme
