--- a/_data/education.yml
+++ b/_data/education.yml
@@ -11,7 +11,7 @@
   dates: Apr 19 – Aug 20
   qualification: Certification
   description: | # this will include new lines to allow paragraphs
-    Accredited CLP Data Analytics Program<Br>
+    Accredited CLP Data Analytics Program<br>
     Associate - Data Science Version 2.0
 
 - layout: left
