--- a/_data/education.yml
+++ b/_data/education.yml
@@ -27,3 +27,31 @@
   qualification: Certification
   description: | # this will include new lines to allow paragraphs
     IBM Data Science
+    
+ - layout: left
+  name: The University of Hong Kong
+  dates: Jul 13 – Mar 16
+  qualification: Doctor of Philosophy
+  description: | # this will include new lines to allow paragraphs
+    Electrical Engineering
+ 
+  - layout: left
+  name: HKU SPACE
+  dates: Jan 08 – Oct 09
+  qualification: Postgraduate Diploma
+  description: | # this will include new lines to allow paragraphs
+    Investment Management
+ 
+ - layout: left
+  name: The University of Hong Kong
+  dates: Sep 05 – Aug 07
+  qualification: Master of Philosophy 
+  description: | # this will include new lines to allow paragraphs
+    Electrical Engineering
+    
+ - layout: left
+  name: The University of Hong Kong
+  dates: Sep 02 – Jun 05
+  qualification: Bachelor of Engineering 
+  description: | # this will include new lines to allow paragraphs
+    Electrical Engineering
