--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,57 +1,21 @@
 # Education Template
 - layout: left
-  name: Ivey Business School at Wester University
-  dates: Sep 19 – Present
-  qualification: Certification
+  name: Degree
+  dates: 
+  qualification:
   description: | # this will include new lines to allow paragraphs
-    Accelerated Management Talent Consortium Programme
-
-- layout: left
-  name: Decoded
-  dates: Apr 19 – Aug 20
-  qualification: Certification
-  description: | # this will include new lines to allow paragraphs
-    Accredited CLP Data Analytics Program<br>
-    Associate - Data Science Version 2.0
-
-- layout: left
-  name: deeplearning.ai
-  dates: Jan 20 – Mar 20 
-  qualification: Certification
-  description: | # this will include new lines to allow paragraphs
-    Deep Learning
-
-- layout: left
-  name: IBM
-  dates: Dec 19 – Feb 20
-  qualification: Certification
-  description: | # this will include new lines to allow paragraphs
-    IBM Data Science
+    Jul 13 – Mar 16    Doctor of Philosophy (Electrical Engineering), The University of Hong Kong
+    Sep 05 – Aug 07    Master of Philosophy (Electrical Engineering), The University of Hong Kong
+    Sep 02 – Jun 05    Bachelor of Engineering (Electrical Engineering), The University of Hong Kong
     
 - layout: left
-  name: The University of Hong Kong
-  dates: Jul 13 – Mar 16
-  qualification: Doctor of Philosophy
+  name: Certificate
+  dates: 
+  qualification:
   description: | # this will include new lines to allow paragraphs
-    Electrical Engineering 
-  
-- layout: left
-  name: HKU SPACE
-  dates: Jan 08 – Oct 09
-  qualification: Postgraduate Diploma
-  description: | # this will include new lines to allow paragraphs
-    Investment Management
- 
-- layout: left
-  name: The University of Hong Kong
-  dates: Sep 05 – Aug 07
-  qualification: Master of Philosophy 
-  description: | # this will include new lines to allow paragraphs
-    Electrical Engineering
-    
-- layout: left
-  name: The University of Hong Kong
-  dates: Sep 02 – Jun 05
-  qualification: Bachelor of Engineering
-  description: | # this will include new lines to allow paragraphs
-    Electrical Engineering
+    Sep 19 – Present   Accelerated Management Talent Consortium Programme, Ivey Business School at Wester University
+    Aug 20 - Aug 20    Associate - Data Science Version 2.0, Dell EMC
+    Apr 19 – Aug 20    Accredited CLP Data Analytics Program, Decoded
+    Jan 20 – Mar 20    Deep Learning, deeplearning.ai
+    Dec 19 – Feb 20    Data Science, IBM
+    Jan 08 – Oct 09    Postgraduate Diploma in Investment Management, HKU SPACE
