--- a/_data/education.yml
+++ b/_data/education.yml
@@ -4,18 +4,18 @@
   dates: 
   qualification:
   description: | # this will include new lines to allow paragraphs
-    Jul 13 – Mar 16    Doctor of Philosophy (Electrical Engineering), The University of Hong Kong
-    Sep 05 – Aug 07    Master of Philosophy (Electrical Engineering), The University of Hong Kong
-    Sep 02 – Jun 05    Bachelor of Engineering (Electrical Engineering), The University of Hong Kong
+    <pre class="tab">Jul 13 – Mar 16</pre>    Doctor of Philosophy (Electrical Engineering), The University of Hong Kong<br>
+    <pre class="tab">Sep 05 – Aug 07</pre>    Master of Philosophy (Electrical Engineering), The University of Hong Kong<br>
+    <pre class="tab">Sep 02 – Jun 05</pre>    Bachelor of Engineering (Electrical Engineering), The University of Hong Kong<br>
     
 - layout: left
   name: Certificate
   dates: 
   qualification:
   description: | # this will include new lines to allow paragraphs
-    Sep 19 – Present   Accelerated Management Talent Consortium Programme, Ivey Business School at Wester University
-    Aug 20 - Aug 20    Associate - Data Science Version 2.0, Dell EMC
-    Apr 19 – Aug 20    Accredited CLP Data Analytics Program, Decoded
-    Jan 20 – Mar 20    Deep Learning, deeplearning.ai
-    Dec 19 – Feb 20    Data Science, IBM
-    Jan 08 – Oct 09    Postgraduate Diploma in Investment Management, HKU SPACE
+    <pre class="tab">Sep 19 – Present</pre>   Accelerated Management Talent Consortium Programme, Ivey Business School at Wester University<br>
+    <pre class="tab">Aug 20 - Aug 20</pre>    Associate - Data Science Version 2.0, Dell EMC<br>
+    <pre class="tab">Apr 19 – Aug 20</pre>    Accredited CLP Data Analytics Program, Decoded<br>
+    <pre class="tab">Jan 20 – Mar 20</pre>    Deep Learning, deeplearning.ai<br>
+    <pre class="tab">Dec 19 – Feb 20</pre>    Data Science, IBM<br>
+    <pre class="tab">Jan 08 – Oct 09</pre>    Postgraduate Diploma in Investment Management, HKU SPACE<br>
