--- a/_data/education.yml
+++ b/_data/education.yml
@@ -13,7 +13,7 @@
   dates: 
   qualification:
   description: | # this will include new lines to allow paragraphs
-    Sep 19 – Present &nbsp;&nbsp;&nbsp;   Accelerated Management Talent Consortium Programme, Ivey Business School at Wester University<br>
+    Sep 19 – Present &nbsp;&nbsp;   Accelerated Management Talent Consortium Programme, Ivey Business School at Wester University<br>
     Aug 20 - Aug 20 &nbsp;&nbsp;&nbsp;    Associate - Data Science Version 2.0, Dell EMC<br>
     Apr 19 – Aug 20 &nbsp;&nbsp;&nbsp;   Accredited CLP Data Analytics Program, Decoded<br>
     Jan 20 – Mar 20 &nbsp;&nbsp;&nbsp;    Deep Learning, deeplearning.ai<br>
