--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -29,11 +29,11 @@
   job_title: 
   dates: Aug 08 – Feb 13
   description: | # this will include new lines to allow paragraphs
-    Jun 12 – Feb 13	   Treasures Relationship Manager, DBS Bank<br>
-    Feb 11 – Mar 12	   Associate Relationship Manager, HSBC<br>
-    May 10 – Feb 11	   Financial Planning Consultant, Citibank<br>
-    Dec 09 – Apr 10	   Personal Financial Manager, Standard Chartered Bank<br>
-    Aug 08 – Nov 09	   General Banking Officer, HSBC<br>
+    Jun 12 – Feb 13 &nbsp;&nbsp;&nbsp; 	   Treasures Relationship Manager, DBS Bank<br>
+    Feb 11 – Mar 12 &nbsp;&nbsp;&nbsp; 	   Associate Relationship Manager, HSBC<br>
+    May 10 – Feb 11 &nbsp;&nbsp;&nbsp; 	   Financial Planning Consultant, Citibank<br>
+    Dec 09 – Apr 10 &nbsp;&nbsp;&nbsp; 	   Personal Financial Manager, Standard Chartered Bank<br>
+    Aug 08 – Nov 09 &nbsp;&nbsp;&nbsp; 	   General Banking Officer, HSBC<br>
     Roles and Responsibilities<br>
     <mark>General Banking</mark>
     <mark>Financial Planning</mark>
